--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -1,3 +1,8 @@
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+pythonpath = ["."]
+
 [project]
 name = "back"
 version = "0.1.0"
